--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+<head> Le site est disponible à l'adresse </head>
 <h1>Resanet - Des voyages nets</h1>
 <p>Transports utilisables : train, avion ou bateau</p>
 </body>
